tests/lean/run/funinduction_ident.lean
-- We re-define these here to avoid stage0 complications
def map (f : őĪ ‚Üí ő≤) : List őĪ ‚Üí List ő≤
  | []    => []
  | a::as => f a :: map f as

def zipWith (f : őĪ ‚Üí ő≤ ‚Üí ő≥) : (xs : List őĪ) ‚Üí (ys : List ő≤) ‚Üí List ő≥
  | x::xs, y::ys => f x y :: zipWith f xs ys
  | _,     _     => []

def append : (xs ys : List őĪ) ‚Üí List őĪ
  | [],    bs => bs
  | a::as, bs => a :: append as bs

namespace ListEx

theorem map_id (xs : List őĪ) : map id xs = xs := by
  fun_induction map <;> simp_all only [map, id]

-- This works because collect ignores `.dropped` arguments

theorem map_map (f : őĪ ‚Üí ő≤) (g : ő≤ ‚Üí ő≥) xs :
  map g (map f xs) = map (g ‚ąė f) xs := by
  fun_induction map <;> simp_all only [map, Function.comp]

-- This should genuinely not work, but have a good error message

/--
error: Found more than one suitable call of 'append' in the goal. Please include the desired arguments.
-/
#guard_msgs in
theorem append_assoc :
  append xs (append ys zs) = append (append xs ys) zs := by
  fun_induction append <;> simp_all only [append]

end ListEx

namespace Ex1

variable (P : Nat ‚Üí Prop)

def ackermann : (Nat √ó Nat) ‚Üí Nat
  | (0, m) => m + 1
  | (n+1, 0) => ackermann (n, 1)
  | (n+1, m+1) => ackermann (n, ackermann (n + 1, m))
termination_by p => p

/--
error: tactic 'fail' failed
case case1
P : Nat ‚Üí Prop
m‚úĚ : Nat
‚äĘ P (ackermann (0, m‚úĚ))

case case2
P : Nat ‚Üí Prop
n‚úĚ : Nat
ih1‚úĚ : P (ackermann (n‚úĚ, 1))
‚äĘ P (ackermann (n‚úĚ.succ, 0))

case case3
P : Nat ‚Üí Prop
n‚úĚ m‚úĚ : Nat
ih2‚úĚ : P (ackermann (n‚úĚ + 1, m‚úĚ))
ih1‚úĚ : P (ackermann (n‚úĚ, ackermann (n‚úĚ + 1, m‚úĚ)))
‚äĘ P (ackermann (n‚úĚ.succ, m‚úĚ.succ))
-/
#guard_msgs in
example : P (ackermann p) := by
  fun_induction ackermann
  fail

/--
error: tactic 'fail' failed
case case1
P : Nat ‚Üí Prop
m‚úĚ : Nat
‚äĘ P (ackermann (0, m‚úĚ))

case case2
P : Nat ‚Üí Prop
n‚úĚ : Nat
‚äĘ P (ackermann (n‚úĚ.succ, 0))

case case3
P : Nat ‚Üí Prop
n‚úĚ m‚úĚ : Nat
‚äĘ P (ackermann (n‚úĚ.succ, m‚úĚ.succ))
-/
#guard_msgs in
example : P (ackermann p) := by
  fun_cases ackermann
  fail

/-- error: Could not find suitable call of 'ackermann' in the goal -/
#guard_msgs in
example : P (ackermann (n, m)) := by
  fun_induction ackermann

end Ex1

namespace Ex2

variable (P : Nat ‚Üí Prop)

def ackermann : Nat ‚Üí Nat ‚Üí Nat
  | 0, m => m + 1
  | n+1, 0 => ackermann n 1
  | n+1, m+1 => ackermann n (ackermann (n + 1) m)
termination_by n m => (n, m)

/--
error: unsolved goals
case case1
P : Nat ‚Üí Prop
m‚úĚ : Nat
‚äĘ P (ackermann 0 m‚úĚ)

case case2
P : Nat ‚Üí Prop
n‚úĚ : Nat
ih1‚úĚ : P (ackermann n‚úĚ 1)
‚äĘ P (ackermann n‚úĚ.succ 0)

case case3
P : Nat ‚Üí Prop
n‚úĚ m‚úĚ : Nat
ih2‚úĚ : P (ackermann (n‚úĚ + 1) m‚úĚ)
ih1‚úĚ : P (ackermann n‚úĚ (ackermann (n‚úĚ + 1) m‚úĚ))
‚äĘ P (ackermann n‚úĚ.succ m‚úĚ.succ)
-/
#guard_msgs in
example : P (ackermann n m) := by
  fun_induction ackermann

end Ex2

namespace Ex3

variable (P : List őĪ ‚Üí Prop)

def ackermann {őĪ} (inc : List őĪ) : List őĪ ‚Üí List őĪ ‚Üí List őĪ
  | [], ms => ms ++ inc
  | _::ns, [] => ackermann inc ns inc
  | n::ns, _::ms => ackermann inc ns (ackermann inc (n::ns) ms)
termination_by ns ms => (ns, ms)

/--
error: unsolved goals
case case1
őĪ : Type u_1
P : List őĪ ‚Üí Prop
inc ms‚úĚ : List őĪ
‚äĘ P (ackermann inc [] ms‚úĚ)

case case2
őĪ : Type u_1
P : List őĪ ‚Üí Prop
inc : List őĪ
head‚úĚ : őĪ
ns‚úĚ : List őĪ
ih1‚úĚ : P (ackermann inc ns‚úĚ inc)
‚äĘ P (ackermann inc (head‚úĚ :: ns‚úĚ) [])

case case3
őĪ : Type u_1
P : List őĪ ‚Üí Prop
inc : List őĪ
n‚úĚ : őĪ
ns‚úĚ : List őĪ
head‚úĚ : őĪ
ms‚úĚ : List őĪ
ih2‚úĚ : P (ackermann inc (n‚úĚ :: ns‚úĚ) ms‚úĚ)
ih1‚úĚ : P (ackermann inc ns‚úĚ (ackermann inc (n‚úĚ :: ns‚úĚ) ms‚úĚ))
‚äĘ P (ackermann inc (n‚úĚ :: ns‚úĚ) (head‚úĚ :: ms‚úĚ))
-/
#guard_msgs in
example : P (ackermann inc n m) := by
  fun_induction ackermann

end Ex3

namespace Structural

variable (P : Nat ‚Üí Prop)

def fib : Nat ‚Üí Nat
  | 0 => 0
  | 1 => 1
  | n+2 => fib n + fib (n+1)
termination_by structural x => x

/--
error: tactic 'fail' failed
case case1
P : Nat ‚Üí Prop
‚äĘ P (fib 0)

case case2
P : Nat ‚Üí Prop
‚äĘ P (fib 1)

case case3
P : Nat ‚Üí Prop
n‚úĚ : Nat
ih2‚úĚ : P (fib n‚úĚ)
ih1‚úĚ : P (fib (n‚úĚ + 1))
‚äĘ P (fib n‚úĚ.succ.succ)
-/
#guard_msgs in
example : P (fib n) := by
  fun_induction fib
  fail

/-- error: Could not find suitable call of 'fib' in the goal -/
#guard_msgs in
example : n ‚Č§ fib (n + 2) := by
  fun_induction fib

end Structural

namespace StructuralWithOmittedParam

variable (P : Nat ‚Üí Prop)

variable (inc : Nat)
def fib : Nat ‚Üí Nat
  | 0 => 0
  | 1 => inc
  | n+2 => fib n + fib (n+1)
termination_by structural x => x

/--
info: StructuralWithOmittedParam.fib.induct (motive : Nat ‚Üí Prop) (case1 : motive 0) (case2 : motive 1)
  (case3 : ‚ąÄ (n : Nat), motive n ‚Üí motive (n + 1) ‚Üí motive n.succ.succ) (a‚úĚ : Nat) : motive a‚úĚ
-/
#guard_msgs in
#check fib.induct -- NB: No inc showing up

/--
error: tactic 'fail' failed
case case1
P : Nat ‚Üí Prop
inc : Nat
‚äĘ P (fib 2 0)

case case2
P : Nat ‚Üí Prop
inc : Nat
‚äĘ P (fib 2 1)

case case3
P : Nat ‚Üí Prop
inc n‚úĚ : Nat
ih2‚úĚ : P (fib 2 n‚úĚ)
ih1‚úĚ : P (fib 2 (n‚úĚ + 1))
‚äĘ P (fib 2 n‚úĚ.succ.succ)
-/
#guard_msgs in
example : P (fib 2 n) := by
  fun_induction fib
  fail

end StructuralWithOmittedParam

namespace StructuralIndices

-- Testing recursion on an indexed data type
inductive Finn : Nat ‚Üí Type where
  | fzero : {n : Nat} ‚Üí Finn n
  | fsucc : {n : Nat} ‚Üí Finn n ‚Üí Finn (n+1)

def Finn.min (x : Bool) {n : Nat} (m : Nat) : Finn n ‚Üí (f : Finn n) ‚Üí Finn n
  | fzero, _ => fzero
  | _, fzero => fzero
  | fsucc i, fsucc j => fsucc (Finn.min (not x) (m + 1) i j)
termination_by structural i => i

def Finn.min' (x : Bool) {n : Nat} (m : Nat) : Finn n ‚Üí (f : Finn n) ‚Üí Finn n
  | fzero, _ => fzero
  | _, fzero => fzero
  | fsucc i, fsucc j => fsucc (Finn.min' (not x) (m + 1) i j)
termination_by structural _ j => j

def Finn.min'' (x : Bool) {n : Nat} (m : Nat) : Finn n ‚Üí (f : Finn n) ‚Üí Finn n
  | fzero, _ => fzero
  | _, fzero => fzero
  | fsucc i, fsucc j => fsucc (Finn.min'' (not x) (m + 1) i j)
termination_by structural n

def Finn.le : Finn n ‚Üí Finn n ‚Üí Bool
  | fzero, _ => true
  | _, fzero => false
  | fsucc i, fsucc j => Finn.le i j

theorem Finn.min_le_right‚āÄ : (Finn.min x m i j).le j := by
  induction x, m, i, j using @Finn.min.induct <;> simp_all [Finn.min, Finn.le]

theorem Finn.min_le_right : (Finn.min x m i j).le j := by
  fun_induction Finn.min <;> simp_all [Finn.min, Finn.le]

theorem Finn.min_le_right' : (Finn.min' x m i j).le j := by
  fun_induction Finn.min' <;> simp_all [Finn.min', Finn.le]

theorem Finn.min_le_right'' : (Finn.min'' x m i j).le j := by
  fun_induction Finn.min'' <;> simp_all [Finn.min'', Finn.le]

end StructuralIndices

namespace Nonrec

def foo := 1

/-- error: No functional cases theorem for 'foo', or function is mutually recursive -/
#guard_msgs in
example : True := by
  fun_induction foo

end Nonrec

namespace Mutual

inductive Tree (őĪ : Type u) : Type u where
  | node : őĪ ‚Üí (Bool ‚Üí List (Tree őĪ)) ‚Üí Tree őĪ

-- Recursion over nested inductive

mutual
def Tree.size : Tree őĪ ‚Üí Nat
  | .node _ tsf => 1 + size_aux (tsf true) + size_aux (tsf false)
termination_by structural t => t
def Tree.size_aux : List (Tree őĪ) ‚Üí Nat
  | [] => 0
  | t :: ts => size t + size_aux ts
end

/-- error: No functional cases theorem for 'Tree.size', or function is mutually recursive -/
#guard_msgs in
example (t : Tree őĪ) : True := by
  fun_induction Tree.size

end Mutual
